VQ-2917:Ability to Patch Values on the Edit Schedule Screen for Selected Risk

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1016,7 +1016,99 @@
       "used_rate": "使用费率",
       "commission_amount": "佣金金额",
       "withholding_rate": "预扣率",
-       "code": "代码"
+      "code": "代码",
+
+      "select_risk_peril": "选择风险险种",
+      "risk_service_list": "风险服务列表",
+      "reassign": "重新分配",
+      "client_is_required": "需要客户",
+      "product_is_required": "需要产品",
+      "policy_interface_is_required": "需要保单接口",
+      "currency_is_required": "需要货币",
+      "payment_mode_is_required": "需要支付方式",
+      "insured_is_required": "需要被保险人",
+      "risk_id_is_required": "需要风险ID",
+      "risk_description_is_required": "需要风险描述",
+      "subclass_is_required": "需要子类",
+      "cover_type_is_required": "需要保障类型",
+      "vehicle_make_is_required": "需要车辆制造商",
+      "vehicle_model_is_required": "需要车辆型号",
+      "model_year_is_required": "需要型号年份",
+      "new_risk_is_required": "需要新风险",
+      "vehicle_model": "车辆型号",
+      "insured_as_regular_driver": "作为常规驾驶员被保险",
+      "log_book_available": "行驶日志可用",
+      "log_book_under_insured_name": "行驶日志在被保险人名下",
+      "log_book": "行驶日志",
+      "model_year": "型号年份",
+      "section_details": "部分细节",
+      "row_num": "行号",
+      "import_a_schedule": "导入时间表",
+      "endorsement_no": "批单号",
+      "import_a_risk": "导入风险",
+      "risk_value": "风险价值",
+      "edit_motor_private_details": "编辑汽车私人详情",
+      "make": "制造商",
+      "yr_manft": "制造年份",
+      "carry_capacity": "承载能力",
+      "chasis_no": "底盘号",
+      "engine_no": "发动机号",
+      "color": "颜色",
+      "motor_private_schedule": "汽车私人时间表",
+      "other_details": "其他细节",
+      "principal_driver_details": "主要驾驶员详情",
+      "generate_cover_note": "生成承保通知",
+      "compute_premium": "计算保费",
+      "expected_premium": "预期保费",
+      "policy_status": "保单状态",
+      "reinsurance_authorized": "再保险已授权",
+      "uw_only": "仅限承保",
+      "renewal_date": "续保日期",
+      "renewable": "可续保",
+      "receive_prem_on": "在...时收取保费",
+      "premium_deposit_balance": "保费存款余额",
+      "policy_joint_client": "保单联合客户",
+      "joint_client_name": "联合客户姓名",
+      "agent_information": "代理人信息",
+      "sub_agent_name": "子代理人姓名",
+      "sub_agent_allowed": "允许子代理人",
+      "commission_allowed": "允许佣金",
+      "agent_discounted": "代理人折扣",
+      "agent_discount": "代理人折扣",
+      "expected_comm_amount": "预期佣金金额",
+      "marketer_commission": "市场营销佣金",
+      "other_intermediary_amount": "其他中介费用",
+      "financial_information": "财务信息",
+      "policy_holders_fund": "保单持有人基金",
+      "extra": "额外",
+      "stamp_duty": "印花税",
+      "future_annual_premium": "未来年度保费",
+      "training_levy": "培训费",
+      "other_client_charges": "其他客户收费",
+      "debited_installment_amount": "扣除的分期付款金额",
+      "current_installment_amount": "当前分期付款金额",
+      "cashback_applicable": "适用现金返还",
+      "certificate_charge": "证书费用",
+      "financier": "融资方",
+      "admin_fee_amount": "管理费金额",
+      "endoresement_discount": "批单折扣",
+      "coinsurance_information": "共同保险信息",
+      "coinsured": "共同被保险人",
+      "coin_leader_combined": "共同领头人组合",
+      "coinsurance_premium": "共同保险保费",
+      "coinsurance_fap": "共同保险FAP",
+      "coinsurance_si": "共同保险SI",
+      "coinsurance_deductible_amount": "共同保险免赔额",
+      "transaction_details": "交易详情",
+      "holding_co": "控股公司",
+      "binder_policy": "保单绑定",
+      "multi_agency_policy": "多代理机构保单",
+      "debiting_type": "扣款类型",
+      "ipf_installments": "IPF分期付款",
+      "check_off_installments": "检查分期付款",
+       "transaction_type": "交易类型",
+     "client_information": "客户信息",
+   "commission": "佣金"
     },
     "claims": {
       "opening": {
@@ -1075,8 +1167,8 @@
         "confirm_delete_peril": "您确定要删除此风险吗？", 
         "enter_peril": "输入风险"
       }
-    }
-  },
+  }
+},
   "lms": {
     "common": {},
     "ind": {
