--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -983,43 +983,135 @@
       "peril_id": "ID",
       "previous": "Vorherige",
 
-    "select_required_documents": "Erforderliche Dokumente auswählen",
-    "edit_required_documents": "Erforderliche Dokumente bearbeiten",
-    "certificates": "Zertifikate",
-    "select_user_certifacte_iot": "Benutzerzertifikats-Lot auswählen",
-    "cert_no": "Zertifikatsnummer",
-    "lot_id": "Los-ID",
-    "issue_date": "Ausgabedatum",
-    "cert_year": "Zertifikatsjahr",
-    "status": "Status",
-    "print_status": "Druckstatus",
-    "print_date": "Druckdatum",
-    "wef": "Gültig ab",
-    "select_certifiactes": "Zertifikate auswählen",
-    "cert_type": "Zertifikatstyp",
-    "lots_id": "Los-ID",
-    "certificate_details": "Zertifikatsdetails",
-    "certificate": "Zertifikat",
-    "active": "Aktiv",
-    "cancelled": "Storniert",
-    "inactive": "Inaktiv",
-    "wet": "Nass",
-    "remark": "Bemerkung",
-    "created_date": "Erstellungsdatum",
-    "add_remarks": "Bemerkungen hinzufügen",
-    "edit_remarks": "Bemerkungen bearbeiten",
-    "related_risks": "Verwandte Risiken",
-    "property_id": "Eigentums-ID",
-    "commission_transaction": "Provisionsgeschäft",
-    "agent_name": "Agentenname",
-    "account_type": "Kontotyp",
-    "setup_rate": "Einrichtungsrate",
-    "used_rate": "Verwendete Rate",
-    "commission_amount": "Provisionsbetrag",
-    "withholding_rate": "Einbehaltungsrate",
-    "code": "Code"
+      "select_required_documents": "Erforderliche Dokumente auswählen",
+      "edit_required_documents": "Erforderliche Dokumente bearbeiten",
+      "certificates": "Zertifikate",
+      "select_user_certifacte_iot": "Benutzerzertifikats-Lot auswählen",
+      "cert_no": "Zertifikatsnummer",
+      "lot_id": "Los-ID",
+      "issue_date": "Ausgabedatum",
+      "cert_year": "Zertifikatsjahr",
+      "status": "Status",
+      "print_status": "Druckstatus",
+      "print_date": "Druckdatum",
+      "wef": "Gültig ab",
+      "select_certifiactes": "Zertifikate auswählen",
+      "cert_type": "Zertifikatstyp",
+      "lots_id": "Los-ID",
+      "certificate_details": "Zertifikatsdetails",
+      "certificate": "Zertifikat",
+      "active": "Aktiv",
+      "cancelled": "Storniert",
+      "inactive": "Inaktiv",
+      "wet": "Nass",
+      "remark": "Bemerkung",
+      "created_date": "Erstellungsdatum",
+      "add_remarks": "Bemerkungen hinzufügen",
+      "edit_remarks": "Bemerkungen bearbeiten",
+      "related_risks": "Verwandte Risiken",
+      "property_id": "Eigentums-ID",
+      "commission_transaction": "Provisionsgeschäft",
+      "agent_name": "Agentenname",
+      "account_type": "Kontotyp",
+      "setup_rate": "Einrichtungsrate",
+      "used_rate": "Verwendete Rate",
+      "commission_amount": "Provisionsbetrag",
+      "withholding_rate": "Einbehaltungsrate",
+      "code": "Code",
+
+      "select_risk_peril": "Risikoart auswählen",
+      "risk_service_list": "Risikodienstliste",
+      "reassign": "Neu zuweisen",
+      "client_is_required": "Kunde ist erforderlich",
+      "product_is_required": "Produkt ist erforderlich",
+      "policy_interface_is_required": "Policen-Schnittstelle ist erforderlich",
+      "currency_is_required": "Währung ist erforderlich",
+      "payment_mode_is_required": "Zahlungsart ist erforderlich",
+      "insured_is_required": "Versicherte Person ist erforderlich",
+      "risk_id_is_required": "Risikonummer ist erforderlich",
+      "risk_description_is_required": "Risikobeschreibung ist erforderlich",
+      "subclass_is_required": "Unterklasse ist erforderlich",
+      "cover_type_is_required": "Deckungsart ist erforderlich",
+      "vehicle_make_is_required": "Fahrzeugmarke ist erforderlich",
+      "vehicle_model_is_required": "Fahrzeugmodell ist erforderlich",
+      "model_year_is_required": "Modelljahr ist erforderlich",
+      "new_risk_is_required": "Neues Risiko ist erforderlich",
+      "vehicle_model": "Fahrzeugmodell",
+      "insured_as_regular_driver": "Versichert als regelmäßiger Fahrer",
+      "log_book_available": "Fahrtenbuch verfügbar",
+      "log_book_under_insured_name": "Fahrtenbuch unter dem Namen des Versicherten",
+      "log_book": "Fahrtenbuch",
+      "model_year": "Modelljahr",
+      "section_details": "Abschnittsdetails",
+      "row_num": "Zeilennummer",
+      "import_a_schedule": "Zeitplan importieren",
+      "endorsement_no": "Genehmigungsnummer",
+      "import_a_risk": "Risiko importieren",
+      "risk_value": "Risiko-Wert",
+      "edit_motor_private_details": "Private Fahrzeugdetails bearbeiten",
+      "make": "Marke",
+      "yr_manft": "Baujahr",
+      "carry_capacity": "Tragfähigkeit",
+      "chasis_no": "Fahrgestellnummer",
+      "engine_no": "Motornummer",
+      "color": "Farbe",
+      "motor_private_schedule": "Private Fahrzeugzeitplanung",
+      "other_details": "Weitere Details",
+      "principal_driver_details": "Details zum Hauptfahrer",
+      "generate_cover_note": "Deckungsnotiz erstellen",
+      "compute_premium": "Prämie berechnen",
+      "expected_premium": "Erwartete Prämie",
+      "policy_status": "Policenstatus",
+      "reinsurance_authorized": "Rückversicherung genehmigt",
+      "uw_only": "Nur UW",
+      "renewal_date": "Erneuerungsdatum",
+      "renewable": "Erneuerbar",
+      "receive_prem_on": "Prämie erhalten am",
+      "premium_deposit_balance": "Prämieneinzahlungsbilanz",
+      "policy_joint_client": "Policen-Joint-Kunde",
+      "joint_client_name": "Name des Joint-Kunden",
+      "agent_information": "Agenteninformationen",
+      "sub_agent_name": "Name des Subagenten",
+      "sub_agent_allowed": "Subagent erlaubt",
+      "commission_allowed": "Provision erlaubt",
+      "agent_discounted": "Agentenrabatt",
+      "agent_discount": "Agentenrabatt",
+      "expected_comm_amount": "Erwarteter Provisionsbetrag",
+      "marketer_commission": "Vermarkterprovision",
+      "other_intermediary_amount": "Andere Zwischenprovisionen",
+      "financial_information": "Finanzinformationen",
+      "policy_holders_fund": "Fonds der Versicherungsnehmer",
+      "extra": "Zusätzlich",
+      "stamp_duty": "Stempelsteuer",
+      "future_annual_premium": "Zukünftige Jahresprämie",
+      "training_levy": "Ausbildungsbeitrag",
+      "other_client_charges": "Andere Kundengebühren",
+      "debited_installment_amount": "Abgebuchter Ratenbetrag",
+      "current_installment_amount": "Aktueller Ratenbetrag",
+      "cashback_applicable": "Cashback anwendbar",
+      "certificate_charge": "Zertifikatsgebühr",
+      "financier": "Finanzierer",
+      "admin_fee_amount": "Verwaltungsgebührenbetrag",
+      "endoresement_discount": "Rabatt auf Genehmigung",
+      "coinsurance_information": "Co-Versicherungsinformationen",
+      "coinsured": "Co-versichert",
+      "coin_leader_combined": "Co-Leiter kombiniert",
+      "coinsurance_premium": "Co-Versicherungsprämie",
+      "coinsurance_fap": "Co-Versicherung FAP",
+      "coinsurance_si": "Co-Versicherung SI",
+      "coinsurance_deductible_amount": "Co-Versicherungsfranchise",
+      "transaction_details": "Transaktionsdetails",
+      "holding_co": "Holdinggesellschaft",
+      "binder_policy": "Binder-Policen",
+      "multi_agency_policy": "Mehragentur-Policen",
+      "debiting_type": "Abbuchungsart",
+      "ipf_installments": "IPF-Raten",
+      "check_off_installments": "Abbuchungsraten prüfen",
+        "transaction_type": "Transaktionstyp",
+  "client_information": "Kundeninformationen",
+   "commission": "Provision"
     },
-  "claims": {
+    "claims": {
   "opening": {
     "claim_opening": "Schadensmeldung",
     "product": "Produkt",
@@ -1077,7 +1169,6 @@
     "enter_peril": "Voer Gevaar in"
   }
 }
-
   },
   "lms": {
     "common": {},
