--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -983,41 +983,132 @@
       "peril_id": "ID",
       "previous": "Anterior",
 
-  "select_required_documents": "Seleccionar documentos requeridos",
-  "edit_required_documents": "Editar documentos requeridos",
-  "certificates": "Certificados",
-  "select_user_certifacte_iot": "Seleccionar lote de certificados de usuario",
-  "cert_no": "No. de certificado",
-  "lot_id": "ID del lote",
-  "issue_date": "Fecha de emisión",
-  "cert_year": "Año del certificado",
-  "status": "Estado",
-  "print_status": "Estado de impresión",
-  "print_date": "Fecha de impresión",
-  "wef": "Desde",
-  "select_certifiactes": "Seleccionar certificados",
-  "cert_type": "Tipo de certificado",
-  "lots_id": "ID de lotes",
-  "certificate_details": "Detalles del certificado",
-  "certificate": "Certificado",
-  "active": "Activo",
-  "cancelled": "Cancelado",
-  "inactive": "Inactivo",
-  "wet": "Húmedo",
-  "remark": "Observación",
-  "created_date": "Fecha de creación",
-  "add_remarks": "Agregar observaciones",
-  "edit_remarks": "Editar observaciones",
-  "related_risks": "Riesgos relacionados",
-  "property_id": "ID de la propiedad",
-  "commission_transaction": "Transacción de comisión",
-  "agent_name": "Nombre del agente",
-  "account_type": "Tipo de cuenta",
-  "setup_rate": "Tasa de configuración",
-  "used_rate": "Tasa utilizada",
-  "commission_amount": "Monto de la comisión",
-  "withholding_rate": "Tasa de retención",
-   "code": "Código"
+      "select_required_documents": "Seleccionar documentos requeridos",
+      "edit_required_documents": "Editar documentos requeridos",
+      "certificates": "Certificados",
+      "select_user_certifacte_iot": "Seleccionar lote de certificados de usuario",
+      "cert_no": "No. de certificado",
+      "lot_id": "ID del lote",
+      "issue_date": "Fecha de emisión",
+      "cert_year": "Año del certificado",
+      "status": "Estado",
+      "print_status": "Estado de impresión",
+      "print_date": "Fecha de impresión",
+      "wef": "Desde",
+      "select_certifiactes": "Seleccionar certificados",
+      "cert_type": "Tipo de certificado",
+      "lots_id": "ID de lotes",
+      "certificate_details": "Detalles del certificado",
+      "certificate": "Certificado",
+      "active": "Activo",
+      "cancelled": "Cancelado",
+      "inactive": "Inactivo",
+      "wet": "Húmedo",
+      "remark": "Observación",
+      "created_date": "Fecha de creación",
+      "add_remarks": "Agregar observaciones",
+      "edit_remarks": "Editar observaciones",
+      "related_risks": "Riesgos relacionados",
+      "property_id": "ID de la propiedad",
+      "commission_transaction": "Transacción de comisión",
+      "agent_name": "Nombre del agente",
+      "account_type": "Tipo de cuenta",
+      "setup_rate": "Tasa de configuración",
+      "used_rate": "Tasa utilizada",
+      "commission_amount": "Monto de la comisión",
+      "withholding_rate": "Tasa de retención",
+      "code": "Código",
+      "select_risk_peril": "Seleccionar riesgo",
+      "risk_service_list": "Lista de servicios de riesgo",
+      "reassign": "Reasignar",
+      "client_is_required": "Se requiere cliente",
+      "product_is_required": "Se requiere producto",
+      "policy_interface_is_required": "Se requiere interfaz de póliza",
+      "currency_is_required": "Se requiere moneda",
+      "payment_mode_is_required": "Se requiere modo de pago",
+      "insured_is_required": "Se requiere asegurado",
+      "risk_id_is_required": "Se requiere ID de riesgo",
+      "risk_description_is_required": "Se requiere descripción del riesgo",
+      "subclass_is_required": "Se requiere subclase",
+      "cover_type_is_required": "Se requiere tipo de cobertura",
+      "vehicle_make_is_required": "Se requiere marca del vehículo",
+      "vehicle_model_is_required": "Se requiere modelo del vehículo",
+      "model_year_is_required": "Se requiere año del modelo",
+      "new_risk_is_required": "Se requiere nuevo riesgo",
+      "vehicle_model": "Modelo del vehículo",
+      "insured_as_regular_driver": "Asegurado como conductor regular",
+      "log_book_available": "Libro de registro disponible",
+      "log_book_under_insured_name": "Libro de registro a nombre del asegurado",
+      "log_book": "Libro de registro",
+      "model_year": "Año del modelo",
+      "section_details": "Detalles de la sección",
+      "row_num": "Número de fila",
+      "import_a_schedule": "Importar un calendario",
+      "endorsement_no": "Número de endoso",
+      "import_a_risk": "Importar un riesgo",
+      "risk_value": "Valor del riesgo",
+      "edit_motor_private_details": "Editar detalles privados del vehículo",
+      "make": "Marca",
+      "yr_manft": "Año de fabricación",
+      "carry_capacity": "Capacidad de carga",
+      "chasis_no": "Número de chasis",
+      "engine_no": "Número de motor",
+      "color": "Color",
+      "motor_private_schedule": "Calendario privado del vehículo",
+      "other_details": "Otros detalles",
+      "principal_driver_details": "Detalles del conductor principal",
+      "generate_cover_note": "Generar nota de cobertura",
+      "compute_premium": "Calcular prima",
+      "expected_premium": "Prima esperada",
+      "policy_status": "Estado de la póliza",
+      "reinsurance_authorized": "Reaseguro autorizado",
+      "uw_only": "Solo UW",
+      "renewal_date": "Fecha de renovación",
+      "renewable": "Renovables",
+      "receive_prem_on": "Recibir prima el",
+      "premium_deposit_balance": "Saldo de depósito de prima",
+      "policy_joint_client": "Cliente conjunto de la póliza",
+      "joint_client_name": "Nombre del cliente conjunto",
+      "agent_information": "Información del agente",
+      "sub_agent_name": "Nombre del subagente",
+      "sub_agent_allowed": "Subagente permitido",
+      "commission_allowed": "Comisión permitida",
+      "agent_discounted": "Descuento del agente",
+      "agent_discount": "Descuento del agente",
+      "expected_comm_amount": "Monto de comisión esperado",
+      "marketer_commission": "Comisión del comercializador",
+      "other_intermediary_amount": "Otro monto intermediario",
+      "financial_information": "Información financiera",
+      "policy_holders_fund": "Fondo de asegurados",
+      "extra": "Extra",
+      "stamp_duty": "Impuesto de timbre",
+      "future_annual_premium": "Prima anual futura",
+      "training_levy": "Impuesto de capacitación",
+      "other_client_charges": "Otros cargos al cliente",
+      "debited_installment_amount": "Monto de cuota debitada",
+      "current_installment_amount": "Monto de cuota actual",
+      "cashback_applicable": "Reembolso aplicable",
+      "certificate_charge": "Cargo por certificado",
+      "financier": "Financiero",
+      "admin_fee_amount": "Monto de la tarifa administrativa",
+      "endoresement_discount": "Descuento por endoso",
+      "coinsurance_information": "Información sobre coaseguro",
+      "coinsured": "Coasegurado",
+      "coin_leader_combined": "Líder combinado",
+      "coinsurance_premium": "Prima de coaseguro",
+      "coinsurance_fap": "Coaseguro FAP",
+      "coinsurance_si": "Coaseguro SI",
+      "coinsurance_deductible_amount": "Monto de deducible de coaseguro",
+      "transaction_details": "Detalles de la transacción",
+      "holding_co": "Sociedad tenedora",
+      "binder_policy": "Póliza de vínculo",
+      "multi_agency_policy": "Póliza multi-agencia",
+      "debiting_type": "Tipo de débito",
+      "ipf_installments": "Cuotas IPF",
+      "check_off_installments": "Cuotas de verificación",
+      "transaction_type": "Tipo de transacción",
+  "client_information": "Información del cliente",
+  "commission": "Comisión"
     },
     "claims": {
       "opening": {
@@ -1076,8 +1167,8 @@
         "confirm_delete_peril": "¿Está seguro de que desea eliminar este riesgo?",  
         "enter_peril": "Ingrese Riesgo" 
       }
-    }
-  },
+  }
+},
   "lms": {
     "common": {},
     "ind": {
