--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -983,43 +983,136 @@
       "peril_id": "ID",
       "previous": "Précédent",
 
-    "select_required_documents": "Sélectionner les documents requis",
-    "edit_required_documents": "Modifier les documents requis",
-    "certificates": "Certificats",
-    "select_user_certifacte_iot": "Sélectionner le lot de certificats utilisateur",
-    "cert_no": "N° de certificat",
-    "lot_id": "ID du lot",
-    "issue_date": "Date d'émission",
-    "cert_year": "Année du certificat",
-    "status": "Statut",
-    "print_status": "Statut de l'impression",
-    "print_date": "Date d'impression",
-    "wef": "WEF",
-    "select_certifiactes": "Sélectionner les certificats",
-    "cert_type": "Type de certificat",
-    "lots_id": "ID des lots",
-    "certificate_details": "Détails du certificat",
-    "certificate": "Certificat",
-    "active": "Actif",
-    "cancelled": "Annulé",
-    "inactive": "Inactif",
-    "wet": "Mouillé",
-    "remark": "Remarque",
-    "created_date": "Date de création",
-    "add_remarks": "Ajouter des remarques",
-    "edit_remarks": "Modifier les remarques",
-    "related_risks": "Risques associés",
-    "property_id": "ID de la propriété",
-    "commission_transaction": "Transaction de commission",
-    "agent_name": "Nom de l'agent",
-    "account_type": "Type de compte",
-    "setup_rate": "Taux d'installation",
-    "used_rate": "Taux utilisé",
-    "commission_amount": "Montant de la commission",
-    "withholding_rate": "Taux de retenue",
-    "code": "Code"
+      "select_required_documents": "Sélectionner les documents requis",
+      "edit_required_documents": "Modifier les documents requis",
+      "certificates": "Certificats",
+      "select_user_certifacte_iot": "Sélectionner le lot de certificats utilisateur",
+      "cert_no": "N° de certificat",
+      "lot_id": "ID du lot",
+      "issue_date": "Date d'émission",
+      "cert_year": "Année du certificat",
+      "status": "Statut",
+      "print_status": "Statut de l'impression",
+      "print_date": "Date d'impression",
+      "wef": "WEF",
+      "select_certifiactes": "Sélectionner les certificats",
+      "cert_type": "Type de certificat",
+      "lots_id": "ID des lots",
+      "certificate_details": "Détails du certificat",
+      "certificate": "Certificat",
+      "active": "Actif",
+      "cancelled": "Annulé",
+      "inactive": "Inactif",
+      "wet": "Mouillé",
+      "remark": "Remarque",
+      "created_date": "Date de création",
+      "add_remarks": "Ajouter des remarques",
+      "edit_remarks": "Modifier les remarques",
+      "related_risks": "Risques associés",
+      "property_id": "ID de la propriété",
+      "commission_transaction": "Transaction de commission",
+      "agent_name": "Nom de l'agent",
+      "account_type": "Type de compte",
+      "setup_rate": "Taux d'installation",
+      "used_rate": "Taux utilisé",
+      "commission_amount": "Montant de la commission",
+      "withholding_rate": "Taux de retenue",
+      "code": "Code",
+
+      "select_risk_peril": "Sélectionner le risque",
+      "risk_service_list": "Liste des services de risque",
+      "reassign": "Réaffecter",
+      "client_is_required": "Le client est requis",
+      "product_is_required": "Le produit est requis",
+      "policy_interface_is_required": "L'interface de police est requise",
+      "currency_is_required": "La devise est requise",
+      "payment_mode_is_required": "Le mode de paiement est requis",
+      "insured_is_required": "L'assuré est requis",
+      "risk_id_is_required": "L'identifiant de risque est requis",
+      "risk_description_is_required": "La description du risque est requise",
+      "subclass_is_required": "La sous-classe est requise",
+      "cover_type_is_required": "Le type de couverture est requis",
+      "vehicle_make_is_required": "La marque du véhicule est requise",
+      "vehicle_model_is_required": "Le modèle du véhicule est requis",
+      "model_year_is_required": "L'année du modèle est requise",
+      "new_risk_is_required": "Un nouveau risque est requis",
+      "vehicle_model": "Modèle du véhicule",
+      "insured_as_regular_driver": "Assuré en tant que conducteur régulier",
+      "log_book_available": "Carnet de bord disponible",
+      "log_book_under_insured_name": "Carnet de bord au nom de l'assuré",
+      "log_book": "Carnet de bord",
+      "model_year": "Année du modèle",
+      "section_details": "Détails de la section",
+      "row_num": "Numéro de ligne",
+      "import_a_schedule": "Importer un calendrier",
+      "endorsement_no": "Numéro d'approbation",
+      "import_a_risk": "Importer un risque",
+      "risk_value": "Valeur du risque",
+      "edit_motor_private_details": "Modifier les détails privés du véhicule",
+      "make": "Marque",
+      "yr_manft": "Année de fabrication",
+      "carry_capacity": "Capacité de transport",
+      "chasis_no": "Numéro de châssis",
+      "engine_no": "Numéro de moteur",
+      "color": "Couleur",
+      "motor_private_schedule": "Calendrier privé du véhicule",
+      "other_details": "Autres détails",
+      "principal_driver_details": "Détails du conducteur principal",
+      "generate_cover_note": "Générer une note de couverture",
+      "compute_premium": "Calculer la prime",
+      "expected_premium": "Prime attendue",
+      "policy_status": "Statut de la police",
+      "reinsurance_authorized": "Réassurance autorisée",
+      "uw_only": "Uniquement UW",
+      "renewal_date": "Date de renouvellement",
+      "renewable": "Renouvelable",
+      "receive_prem_on": "Recevoir la prime le",
+      "premium_deposit_balance": "Solde de dépôt de prime",
+      "policy_joint_client": "Client conjoint de la police",
+      "joint_client_name": "Nom du client conjoint",
+      "agent_information": "Informations sur l'agent",
+      "sub_agent_name": "Nom du sous-agent",
+      "sub_agent_allowed": "Sous-agent autorisé",
+      "commission_allowed": "Commission autorisée",
+      "agent_discounted": "Remise agent",
+      "agent_discount": "Remise agent",
+      "expected_comm_amount": "Montant de commission attendu",
+      "marketer_commission": "Commission du commercial",
+      "other_intermediary_amount": "Autre montant intermédiaire",
+      "financial_information": "Informations financières",
+      "policy_holders_fund": "Fonds des assurés",
+      "extra": "Supplémentaire",
+      "stamp_duty": "Droits d'enregistrement",
+      "future_annual_premium": "Prime annuelle future",
+      "training_levy": "Cotisation de formation",
+      "other_client_charges": "Autres frais clients",
+      "debited_installment_amount": "Montant de la mensualité débitée",
+      "current_installment_amount": "Montant de la mensualité actuelle",
+      "cashback_applicable": "Remboursement applicable",
+      "certificate_charge": "Frais de certificat",
+      "financier": "Financier",
+      "admin_fee_amount": "Montant des frais administratifs",
+      "endoresement_discount": "Remise sur l'approbation",
+      "coinsurance_information": "Informations sur la coassurance",
+      "coinsured": "Coassuré",
+      "coin_leader_combined": "Co-leader combiné",
+      "coinsurance_premium": "Prime de coassurance",
+      "coinsurance_fap": "Coassurance FAP",
+      "coinsurance_si": "Coassurance SI",
+      "coinsurance_deductible_amount": "Montant de la franchise de coassurance",
+      "transaction_details": "Détails de la transaction",
+      "holding_co": "Société holding",
+      "binder_policy": "Police de liant",
+      "multi_agency_policy": "Police multi-agence",
+      "debiting_type": "Type de débit",
+      "ipf_installments": "Mensualités IPF",
+      "check_offf_installments": "Vérifier les mensualités",
+       "transaction_type": "Type de transaction",
+  "client_information": "Informations sur le client",
+  "commission": "Commission"
+
     },
-"claims": {
+    "claims": {
     "opening": {
       "claim_opening": "Ouverture de réclamation",
       "product": "Produit",
@@ -1075,9 +1168,9 @@
         "edit_peril": "Modifier le péril", 
         "confirm_delete_peril": "Êtes-vous sûr de vouloir supprimer ce péril ?", 
         "enter_peril": "Entrez le péril"
-    }
   }
-  },
+  }
+},
   "lms": {
     "common": {},
     "ind": {
