VQ-2017: Internationalisation of Quotations - Client Details

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1023,6 +1023,80 @@
   "lms": {
     "common": {},
     "ind": {
+      "quotations": {
+        "account_number": "Kontonummer",
+        "bank": "Bank",
+        "bank_branch": "Bankfiliale",
+        "banking_details": "Bankdaten",
+        "basic_details": "Grundlegende Angaben",
+        "branch": "Filiale",
+        "branch_required": "Filiale ist erforderlich",
+        "citizenship": "Staatsangehörigkeit",
+        "client": "Kunde",
+        "contact_details": "Kontaktdaten",
+        "continue": "Weiter",
+        "country": "Land",
+        "county": "Bezirk",
+        "currency": "Währung",
+        "distribution_channel": "Vertriebskanal",
+        "dob": "Geburtsdatum",
+        "dob_required": "Geburtsdatum ist erforderlich",
+        "economic_sector": "Wirtschaftssektor",
+        "email_address": "E-Mail-Adresse",
+        "existing_client": "Bestehender Kunde",
+        "female": "Weiblich",
+        "first_name": "Vorname",
+        "first_name_required": "Vorname ist erforderlich",
+        "gender": "Geschlecht",
+        "iban": "IBAN",
+        "incorrect_id_no_format": "Falsches Ausweisnummernformat",
+        "last_name": "Nachname",
+        "last_name_required": "Nachname ist erforderlich",
+        "male": "Männlich",
+        "marital_status": "Familienstand",
+        "mode_of_identity": "Identitätsnachweis",
+        "mode_of_identity_number": "Identitätsnachweis-Nummer",
+        "mode_of_identity_required": "Identitätsnachweis ist erforderlich",
+        "mpay_no": "MPay-Nummer",
+        "nationality": "Nationalität",
+        "nationality_required": "Nationalität ist erforderlich",
+        "new_client": "Neuer Kunde",
+        "occupation": "Beruf",
+        "phone_number": "Telefonnummer",
+        "physical_address": "Physische Adresse",
+        "pin_number": "PIN-Nummer",
+        "pin_number_required": "PIN-Nummer ist erforderlich",
+        "po_box_number": "Postfachnummer",
+        "postal_address_details": "Postanschrift Details",
+        "preferred_channel": "Bevorzugter Kanal",
+        "premium_frequency": "Prämienfrequenz",
+        "purpose_of_insurance": "Zweck der Versicherung",
+        "select_bank": "Bank auswählen",
+        "select_bank_branch": "Bankfiliale auswählen",
+        "select_branch": "Filiale auswählen",
+        "select_citizenship": "Staatsangehörigkeit auswählen",
+        "select_client": "Kunde auswählen",
+        "select_country": "Land auswählen",
+        "select_county": "Bezirk auswählen",
+        "select_currency": "Währung auswählen",
+        "select_economic_sector": "Wirtschaftssektor auswählen",
+        "select_marital_status": "Familienstand auswählen",
+        "select_mode_of_identity": "Identitätsnachweis auswählen",
+        "select_occupation_status": "Beruf auswählen",
+        "select_nationality": "Nationalität auswählen",
+        "select_preferred_channel": "Bevorzugten Kanal auswählen",
+        "select_source": "Quelle auswählen",
+        "select_title": "Titel auswählen",
+        "select_town": "Stadt auswählen",
+        "sms_number": "SMS-Nummer",
+        "source_of_funds": "Mittelherkunft",
+        "title": "Titel",
+        "type_of_employment": "Beschäftigungsart",
+        "town": "Stadt",
+        "wealth_aml_details": "Vermögens-AML-Details",
+        "with_effect_from": "Gültig ab",
+        "with_effect_to": "Gültig bis"
+      },
       "causation_cause": "Ursachenzusammenhang",
       "causation_type": "Ursachentyp",
       "choose_file": "Datei auswählen",
