--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1056,8 +1056,81 @@
     }
   },
   "lms": {
-    "common": {},
-    "ind": {
+       "ind": {
+        "quotations": {
+          "account_number":"Account No.",
+          "bank": "Bank",
+          "bank_branch":" Bank Branch",
+          "banking_details":"Banking Details",
+          "basic_details": "Basic Details",
+          "branch": "Branch",
+          "branch_required":"Branch is required",
+          "citizenship":"Citizenship",
+          "client": "Client",
+          "contact_details": "Contact Details",
+          "continue": "Continue",
+          "country": "Country",
+          "county": "County",
+          "currency":"Currency",
+          "distribution_channel":"Distribution Channel",
+          "dob": "Date of Birth",
+          "dob_required": "Date of Birth is required",
+          "economic_sector": "Economic Sector",
+          "email_address":"Email Address",
+          "existing_client": "Existing Client",
+          "female": "Female",
+          "first_name": "First Name",
+          "first_name_required": "First Name is required",
+          "gender":"Gender",
+          "iban": "IBAN",
+          "incorrect_id_no_format": "Incorrect ID No Format",
+          "last_name": "Last Name",
+          "last_name_required": "Last Name is required",
+          "male": "Male",
+          "marital_status": "Marital Status",
+          "mode_of_identity": "Mode of Identity",
+          "mode_of_identity_number": "Mode of Identity Number",
+          "mode_of_identity_required": "Mode of Identity is required",
+          "mpay_no":"MPay No",
+          "nationality": "Nationality",
+          "nationality_required": "Nationality is required",
+          "new_client": "New Client",
+          "occupation": "Occupation",
+          "phone_number" :"Phone Number",
+          "physical_address":"Physical Address",
+          "pin_number": "PIN Number",
+          "pin_number_required": "PIN Number is required",
+          "po_box_number":"P.O. Box Number",
+          "postal_address_details" :"Postal Address Details",
+          "preferred_channel":"Preferred Channel",
+          "premium_frequency":"Premium Frequency",
+          "purpose_of_insurance": "Purpose of Insurance",
+          "select_bank":"Select Bank",
+          "select_bank_branch":"Select Bank Branch",
+          "select_branch": "Select Branch",
+          "select_citizenship":"Select Citizenship",
+          "select_client":"Select Client",
+          "select_country": "Select Country",
+          "select_county": "Select County",
+          "select_currency": "Select Currency",
+          "select_economic_sector": "Select Economic Sector",
+          "select_marital_status": "Select Marital Status",
+          "select_mode_of_identity": "Select Mode of Identity",
+          "select_occupation_status": "Select Occupation",
+          "select_nationality": "Select Nationality",
+          "select_preferred_channel": "Select Preferred Channel",
+          "select_source":"Select Source",
+          "select_title": "Select Title",
+          "select_town": "Select Town",
+          "sms_number":"SMS Number",
+          "source_of_funds":"Source of Funds",
+          "title": "Title",
+          "type_of_employment":"Type of Employment",
+          "town": "Town",
+          "wealth_aml_details":"Wealth AML details",
+          "with_effect_from":"With Effect From",
+          "with_effect_to":"With Effect To"
+        },
       "causation_cause": "Causation Cause",
       "causation_type": "Causation Type",
       "choose_file": "Choose File",
