--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1023,6 +1023,80 @@
   "lms": {
     "common": {},
     "ind": {
+      "quotations": {
+        "account_number": "Número de cuenta",
+        "bank": "Banco",
+        "bank_branch": "Sucursal bancaria",
+        "banking_details": "Detalles bancarios",
+        "basic_details": "Detalles básicos",
+        "branch": "Sucursal",
+        "branch_required": "La sucursal es obligatoria",
+        "citizenship": "Ciudadanía",
+        "client": "Cliente",
+        "contact_details": "Detalles de contacto",
+        "continue": "Continuar",
+        "country": "País",
+        "county": "Condado",
+        "currency": "Moneda",
+        "distribution_channel": "Canal de distribución",
+        "dob": "Fecha de nacimiento",
+        "dob_required": "La fecha de nacimiento es obligatoria",
+        "economic_sector": "Sector económico",
+        "email_address": "Dirección de correo electrónico",
+        "existing_client": "Cliente existente",
+        "female": "Femenino",
+        "first_name": "Nombre",
+        "first_name_required": "El nombre es obligatorio",
+        "gender": "Género",
+        "iban": "IBAN",
+        "incorrect_id_no_format": "Formato incorrecto del número de identificación",
+        "last_name": "Apellido",
+        "last_name_required": "El apellido es obligatorio",
+        "male": "Masculino",
+        "marital_status": "Estado civil",
+        "mode_of_identity": "Tipo de identificación",
+        "mode_of_identity_number": "Número de identificación",
+        "mode_of_identity_required": "El tipo de identificación es obligatorio",
+        "mpay_no": "Número MPay",
+        "nationality": "Nacionalidad",
+        "nationality_required": "La nacionalidad es obligatoria",
+        "new_client": "Nuevo cliente",
+        "occupation": "Ocupación",
+        "phone_number": "Número de teléfono",
+        "physical_address": "Dirección física",
+        "pin_number": "Número PIN",
+        "pin_number_required": "El número PIN es obligatorio",
+        "po_box_number": "Número de apartado postal",
+        "postal_address_details": "Detalles de la dirección postal",
+        "preferred_channel": "Canal preferido",
+        "premium_frequency": "Frecuencia de prima",
+        "purpose_of_insurance": "Propósito del seguro",
+        "select_bank": "Seleccionar banco",
+        "select_bank_branch": "Seleccionar sucursal bancaria",
+        "select_branch": "Seleccionar sucursal",
+        "select_citizenship": "Seleccionar ciudadanía",
+        "select_client": "Seleccionar cliente",
+        "select_country": "Seleccionar país",
+        "select_county": "Seleccionar condado",
+        "select_currency": "Seleccionar moneda",
+        "select_economic_sector": "Seleccionar sector económico",
+        "select_marital_status": "Seleccionar estado civil",
+        "select_mode_of_identity": "Seleccionar tipo de identificación",
+        "select_occupation_status": "Seleccionar ocupación",
+        "select_nationality": "Seleccionar nacionalidad",
+        "select_preferred_channel": "Seleccionar canal preferido",
+        "select_source": "Seleccionar fuente",
+        "select_title": "Seleccionar título",
+        "select_town": "Seleccionar ciudad",
+        "sms_number": "Número SMS",
+        "source_of_funds": "Fuente de fondos",
+        "title": "Título",
+        "type_of_employment": "Tipo de empleo",
+        "town": "Ciudad",
+        "wealth_aml_details": "Detalles AML sobre patrimonio",
+        "with_effect_from": "Con efecto desde",
+        "with_effect_to": "Con efecto hasta"
+      },
       "causation_cause": "Causa de la causalidad",
       "causation_type": "Tipo de causalidad",
       "choose_file": "Elegir archivo",
