--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1023,6 +1023,80 @@
   "lms": {
     "common": {},
     "ind": {
+      "quotations": {
+        "account_number": "Numéro de compte",
+        "bank": "Banque",
+        "bank_branch": "Agence bancaire",
+        "banking_details": "Détails bancaires",
+        "basic_details": "Détails de base",
+        "branch": "Agence",
+        "branch_required": "L'agence est requise",
+        "citizenship": "Nationalité",
+        "client": "Client",
+        "contact_details": "Détails de contact",
+        "continue": "Continuer",
+        "country": "Pays",
+        "county": "Comté",
+        "currency": "Devise",
+        "distribution_channel": "Canal de distribution",
+        "dob": "Date de naissance",
+        "dob_required": "La date de naissance est requise",
+        "economic_sector": "Secteur économique",
+        "email_address": "Adresse e-mail",
+        "existing_client": "Client existant",
+        "female": "Femme",
+        "first_name": "Prénom",
+        "first_name_required": "Le prénom est requis",
+        "gender": "Genre",
+        "iban": "IBAN",
+        "incorrect_id_no_format": "Format du numéro d'identification incorrect",
+        "last_name": "Nom de famille",
+        "last_name_required": "Le nom de famille est requis",
+        "male": "Homme",
+        "marital_status": "État civil",
+        "mode_of_identity": "Type d'identité",
+        "mode_of_identity_number": "Numéro d'identité",
+        "mode_of_identity_required": "Le type d'identité est requis",
+        "mpay_no": "Numéro MPay",
+        "nationality": "Nationalité",
+        "nationality_required": "La nationalité est requise",
+        "new_client": "Nouveau client",
+        "occupation": "Profession",
+        "phone_number": "Numéro de téléphone",
+        "physical_address": "Adresse physique",
+        "pin_number": "Numéro PIN",
+        "pin_number_required": "Le numéro PIN est requis",
+        "po_box_number": "Numéro de boîte postale",
+        "postal_address_details": "Détails de l'adresse postale",
+        "preferred_channel": "Canal préféré",
+        "premium_frequency": "Fréquence des primes",
+        "purpose_of_insurance": "Objet de l'assurance",
+        "select_bank": "Sélectionner la banque",
+        "select_bank_branch": "Sélectionner l'agence bancaire",
+        "select_branch": "Sélectionner l'agence",
+        "select_citizenship": "Sélectionner la nationalité",
+        "select_client": "Sélectionner le client",
+        "select_country": "Sélectionner le pays",
+        "select_county": "Sélectionner le comté",
+        "select_currency": "Sélectionner la devise",
+        "select_economic_sector": "Sélectionner le secteur économique",
+        "select_marital_status": "Sélectionner l'état civil",
+        "select_mode_of_identity": "Sélectionner le type d'identité",
+        "select_occupation_status": "Sélectionner la profession",
+        "select_nationality": "Sélectionner la nationalité",
+        "select_preferred_channel": "Sélectionner le canal préféré",
+        "select_source": "Sélectionner la source",
+        "select_title": "Sélectionner le titre",
+        "select_town": "Sélectionner la ville",
+        "sms_number": "Numéro SMS",
+        "source_of_funds": "Source des fonds",
+        "title": "Titre",
+        "type_of_employment": "Type d'emploi",
+        "town": "Ville",
+        "wealth_aml_details": "Détails AML sur la richesse",
+        "with_effect_from": "En vigueur à partir du",
+        "with_effect_to": "En vigueur jusqu'au"
+      },
       "causation_cause": "Cause de causalité",
       "causation_type": "Type de causalité",
       "choose_file": "Choisir un fichier",
